# skill-scraper

./: .gitignore  COMPLETION_SUMMARY.md  EXTRACTION_GUIDE.md  FEATURE_SUMMARY.md  PROMPT_VISIBILITY_FIX.md  README.md  UI_UPGRADE_SUMMARY.md  WORKFLOW.md  config.py  example.py  main.py  pyproject.toml  scraper.py  skill_detector.py  skill_extractor.py  skill_generator.py  storage.py  ui.py
tests/: __init__.py  test_config.py  test_integration.py  test_main.py  test_scraper.py  test_skill_detector.py  test_skill_extractor.py  test_skill_generator.py  test_storage.py  test_ui.py
