[project]
name = "skill-scraper"
version = "0.1.0"
description = "Scrape GitHub repositories from awesome-* lists and add them as Claude Code skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
